# astraeval

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/configs/: qa_rag_en.yaml  qa_rag_es.yaml  summarization.yaml
examples/datasets/: qa_rag_en.jsonl  qa_rag_es.jsonl  summarization.jsonl
examples/output/qa_rag_en/sample/: manifest.json  report.html  samples.jsonl  summary.json
examples/output/qa_rag_es/sample/: manifest.json  report.html  samples.jsonl  summary.json
examples/output/summarization/sample/: manifest.json  report.html  samples.jsonl  summary.json
src/astraea/: __init__.py  __main__.py  exceptions.py
src/astraea/cli/: __init__.py  _diff.py  _run.py
src/astraea/config/: __init__.py  builder.py  loader.py  schema.py
src/astraea/core/: __init__.py  cache.py  eval_run.py
src/astraea/datasets/: __init__.py  jsonl.py
src/astraea/metrics/: __init__.py  answer_relevance.py  base.py  context_precision.py  exact_match.py  faithfulness.py  hallucination.py  llm_judge.py
src/astraea/providers/: __init__.py  anthropic_provider.py  base.py  cached.py  fake.py  ollama_provider.py  openai_provider.py
src/astraea/reports/: __init__.py  html_report.py  json_report.py
src/astraeval/: __init__.py  __main__.py  exceptions.py
src/astraeval/cli/: __init__.py  _diff.py  _run.py
src/astraeval/config/: __init__.py  builder.py  loader.py  schema.py
src/astraeval/core/: __init__.py  cache.py  eval_run.py  types.py
src/astraeval/datasets/: __init__.py  jsonl.py
src/astraeval/metrics/: __init__.py  answer_relevance.py  base.py  context_precision.py  exact_match.py  faithfulness.py  hallucination.py  llm_judge.py
src/astraeval/providers/: __init__.py  anthropic_provider.py  base.py  cached.py  fake.py  ollama_provider.py  openai_provider.py
src/astraeval/reports/: __init__.py  html_report.py  json_report.py
src/llm_evals/: __init__.py  cli.py  exceptions.py
src/llm_evals/cli/: __init__.py  _diff.py  _run.py
src/llm_evals/config/: __init__.py  builder.py  loader.py  schema.py
src/llm_evals/core/: __init__.py  cache.py  eval_run.py  manifest.py
src/llm_evals/datasets/: __init__.py  jsonl.py  sample.py
src/llm_evals/metrics/: __init__.py  answer_relevance.py  base.py  context_precision.py  exact_match.py  faithfulness.py  hallucination.py  llm_judge.py
src/llm_evals/providers/: __init__.py  anthropic_provider.py  base.py  cached.py  fake.py  ollama_provider.py  openai_provider.py
src/llm_evals/reports/: __init__.py  html_report.py  json_report.py
tests/: test_exceptions.py  test_smoke.py
tests/cli/: test_diff.py  test_main.py
tests/config/: test_builder.py  test_loader.py  test_schema.py
tests/core/: test_cache.py  test_eval_run.py  test_manifest.py
tests/datasets/: test_jsonl.py  test_sample.py
tests/metrics/: test_answer_relevance.py  test_base.py  test_context_precision.py  test_exact_match.py  test_faithfulness.py  test_hallucination.py  test_llm_judge.py
tests/providers/: test_anthropic_provider.py  test_base.py  test_cached.py  test_fake.py  test_ollama_provider.py  test_openai_provider.py
tests/reports/: test_html_report.py  test_json_report.py
